version 1.5.8 ArtExtendedView: add bindArt overloads